--- a/studies/vue-traversy-course/random-generator/index.html
+++ b/studies/vue-traversy-course/random-generator/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <script src="https://kit.fontawesome.com/1a415b1d46.js" crossorigin="anonymous"></script>
+
     <title>Gerador Aleatório de Usuários</title>
 </head>
 <body>
-    
+    <div id="app">
+    </div>
+
+    <script src="https://unpkg.com/vue@3.2.6"></script>
+    <script src="assets/js/v.leo/app.js"></script>
 </body>
 </html>
