tribute page project

--- a/studies/freecodecamp/index.html
+++ b/studies/freecodecamp/index.html
@@ -40,7 +40,7 @@
                 <p>Build a tribute page that has <a href="https://codepen.io/freeCodeCamp/full/zNqgVx">this</a> functionality.</p>
                 <nav class="nav">
                     <ul class="main-link">
-                        <li><a href="#"><i class="fas fa-globe"></i> Live</a></li>
+                        <li><a href="responsive-web-design/tribute-page/index.html"><i class="fas fa-globe"></i> Live</a></li>
                     </ul>
                     <ul class="secondary-link">
                         <li><a href="#"><i class="fas fa-code"></i> Source</a></li>
