--- a/studies/freecodecamp/responsive-web-design/tribute-page/index.html
+++ b/studies/freecodecamp/responsive-web-design/tribute-page/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta name="description" content="A tribute page to Sofia Kovalevskaya">
+    <meta name="keywords" content="Kovalevskaya, applied mathematics, mathematics, female mathematician, differential equations, historical women">
+    <meta name="author" content="Leo Thomas Monteiro">
+
     <link rel="stylesheet" href="style.css">
 
     <script src="https://kit.fontawesome.com/1a415b1d46.js" crossorigin="anonymous"></script>
@@ -28,7 +32,7 @@
             </div>
         </article>
 
-        <article class="main-content">
+        <main class="main-content">
             <p id="tribute-info" class="tribute-info">Women at that time were not allowed to formally attend university, but Kovalevskaya was allowed to audit mathematics classes at the University of Heidelberg, Germany. In 1874 she presented papers on topics such as partial differential equations, the dynamics of the rings of Saturn, and elliptic integrals. <strong>Kovalevskaya became the first woman in Europe to earn a doctorate in mathematics.</strong> She later secured a position at Stockholm University with the help of Swedish mathematician Gösta Mittag-Leffler, whom she met through his sister Anne Charlotte Leffler, a woman with whom she supposedly had an intimate “romantic friendship” that lasted until Kovalevskaya’s death from influenza at the age of 41.</p>
 
             <details open class="timeline">
@@ -69,7 +73,7 @@
             </section>
 
             <aside>
-                <p>Read more about her story at <a id="tribute-link" href="https://en.wikipedia.org/wiki/Sofya_Kovalevskaya" rel="noreferrer" target="_blank">Wikipedia</a>! You can check the book <em><a href="https://www.amazon.com.br/dp/B000SBPACE/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1">A Convergence of Lives: Sofia Kovalevskaia - Scientist, Writer, Revolutionary</a></em>, wrote by Ann about her life, or her own biography <em><a href="https://www.amazon.com/Nihilist-Texts-Translations-Sofya-Kovalevskaya/dp/0873527909/">Nihilist Girl</a></em>, translated by Natasha Kolchevska and Mary Zirin.</p>
+                <p>Read more about her story at <a id="tribute-link" href="https://en.wikipedia.org/wiki/Sofya_Kovalevskaya" rel="noreferrer" target="_blank">Wikipedia</a>! You can check the book <em><a href="https://www.amazon.com.br/dp/B000SBPACE/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1" rel="noreferrer" target="_blank">A Convergence of Lives: Sofia Kovalevskaia - Scientist, Writer, Revolutionary</a></em>, wrote by Ann about her life, or her own biography <em><a href="https://www.amazon.com/Nihilist-Texts-Translations-Sofya-Kovalevskaya/dp/0873527909/" rel="noreferrer" target="_blank">Nihilist Girl</a></em>, translated by Natasha Kolchevska and Mary Zirin.</p>
             </aside>
     
             <details open>
@@ -81,7 +85,7 @@
                     <li><a href="https://en.wikipedia.org/wiki/Sofya_Kovalevskaya">Sofya Kovalevskaya, in Wikipedia.</a></li>
                 </ul>
             </details>
-        </article>
+        </main>
 
     </section>
 
