--- a/studies/freecodecamp/responsive-web-design/tribute-page/index.html
+++ b/studies/freecodecamp/responsive-web-design/tribute-page/index.html
@@ -32,7 +32,7 @@
             </div>
         </article>
 
-        <main class="main-content">
+        <article class="main-content">
             <p id="tribute-info" class="tribute-info">Women at that time were not allowed to formally attend university, but Kovalevskaya was allowed to audit mathematics classes at the University of Heidelberg, Germany. In 1874 she presented papers on topics such as partial differential equations, the dynamics of the rings of Saturn, and elliptic integrals. <strong>Kovalevskaya became the first woman in Europe to earn a doctorate in mathematics.</strong> She later secured a position at Stockholm University with the help of Swedish mathematician Gösta Mittag-Leffler, whom she met through his sister Anne Charlotte Leffler, a woman with whom she supposedly had an intimate “romantic friendship” that lasted until Kovalevskaya’s death from influenza at the age of 41.</p>
 
             <details open class="timeline">
@@ -85,7 +85,7 @@
                     <li><a href="https://en.wikipedia.org/wiki/Sofya_Kovalevskaya">Sofya Kovalevskaya, in Wikipedia.</a></li>
                 </ul>
             </details>
-        </main>
+        </article>
 
     </section>
 
