--- a/studies/freecodecamp/responsive-web-design/tribute-page/index.html
+++ b/studies/freecodecamp/responsive-web-design/tribute-page/index.html
@@ -26,7 +26,7 @@
             <div id="img-div" class="main-image-container">
                 <h4 class="subtitle">Born in Moscow, Sofia Kovalevskaya was the first major Russian female mathematician, the first woman to work as an editor for a scientific journal, and a contributor to the development of the Cauchy–Kovalevskaya theorem.</h4>
                 <figure>
-                    <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/f/f6/Sofja_Wassiljewna_Kowalewskaja_1.jpg" alt="Sofia Kovalevskaya portrait.">
+                    <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/f/f6/Sofja_Wassiljewna_Kowalewskaja_1.jpg" alt="Sofia Kovalevskaya portrait." loading="lazy">
                     <figcaption id="img-caption"><span lang="ru">Софья Ковалевская</span></figcaption>
                 </figure>
             </div>
@@ -57,15 +57,15 @@
                     <summary class="subtitle">Important relationships of Kovalevskaya</summary>
                     <div class="photos-container">
                         <figure class="minipolaroid">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/4/47/Magnus_Goesta_Mittag-Leffler_1.jpg">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/4/47/Magnus_Goesta_Mittag-Leffler_1.jpg" alt="Gösta Mittag-Leffler portrait." loading="lazy">
                             <figcaption>Gösta Mittag-Leffler, friend</figcaption>
                         </figure>
                         <figure class="minipolaroid">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Anne_Charlotte_Leffler_2.jpg/300px-Anne_Charlotte_Leffler_2.jpg">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Anne_Charlotte_Leffler_2.jpg/300px-Anne_Charlotte_Leffler_2.jpg" alt="Anne Charlotte Leffler portrait." loading="lazy">
                             <figcaption>Anne Charlotte Leffler, friend</figcaption>
                         </figure>
                         <figure class="minipolaroid">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Anna_Jaclard.jpg/330px-Anna_Jaclard.jpg">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Anna_Jaclard.jpg/330px-Anna_Jaclard.jpg" alt="Anne Jaclard portrait." loading="lazy">
                             <figcaption>Anne Jaclard, sister</figcaption>
                         </figure>
                     </div>
