--- a/studies/freecodecamp/responsive-web-design/tribute-page/index.html
+++ b/studies/freecodecamp/responsive-web-design/tribute-page/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <script src="https://kit.fontawesome.com/1a415b1d46.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/1a415b1d46.js" crossorigin="anonymous" defer></script>
 
     <title>Tribute Page</title>
 </head>
