--- a/404.html
+++ b/404.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <script src="https://kit.fontawesome.com/1a415b1d46.js" crossorigin="anonymous" defer></script>
+
+    <style>
+        body {text-align: center; display: flex; flex-flow: column wrap; justify-content: space-between; min-height: 90vh; font-family: monospace; font-size: 125%;}
+        a {text-decoration: none;}
+        img {border-radius: 50%;}
+        ul {padding: 0}
+    </style>
+
+    <title>404 - Leo's Projects</title>
 </head>
 <body>
-    <h1>Whoops!</h1>
+
+    <header>
+        <h1>Leo's Projects</h1>
+        <h2>Whoops!</h2>
+    </header>
+
+    <nav>
+        <ul>
+            <a href="index.html"><i class="fas fa-home"></i> Homepage</a>
+        </ul>
+    </nav>
+
+    <article>
+        <p>O que você está procurando não está aqui.</p>
+        <p>Estou alterando as coisas com frequência por aqui, se notar algum erro, me avise!</p>
+        <img src="https://i.pinimg.com/originals/08/fb/61/08fb615b1a389de5bc0410136d75f50d.gif" alt="a cat finding code bugs." width="240" height="240">
+    </article>
+
+    <footer>
+        <p><strong>2021. Leo Thomas Monteiro.</strong></p>
+    </footer>
+
 </body>
 </html>
