--- a/projects/originals/virgulador/index.html
+++ b/projects/originals/virgulador/index.html
@@ -7,7 +7,8 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <script src="https://kit.fontawesome.com/1a415b1d46.js" crossorigin="anonymous"></script>
+    <script src="script.js" defer></script>
+    <script src="https://kit.fontawesome.com/1a415b1d46.js" crossorigin="anonymous" defer></script>
 
     <title>O Virgulador</title>
 </head>
@@ -34,8 +35,7 @@
 
     <footer class="attribution">
         <p>Feito com <i class="fas fa-heart"></i> pelo Leo para FaDir/FURG. 2021.</p>
-    </footer>        
-    
-    <script src="script.js"></script>
+    </footer>
+
 </body>
 </html>
