--- a/studies/freecodecamp/index.html
+++ b/studies/freecodecamp/index.html
@@ -5,16 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta name="description" content="FreeCodeCamp courses final exercises.">
+    <meta name="keywords" content="FreeCodeCamp, anotherleo, JavaScript, Responsive Web Design">
+    <meta name="author" content="Leo Thomas Monteiro">
+
     <link rel="stylesheet" href="style.css">
 
-    <script src="https://kit.fontawesome.com/1a415b1d46.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/1a415b1d46.js" crossorigin="anonymous" defer></script>
 
     <title>FreeCodeCamp Portfolio</title>
 </head>
 <body>
 
     <header>
-        <h1><i class="fab fa-free-code-camp"></i></h1>
+        <h1><i class="fab fa-free-code-camp" aria-hidden="true"></i></h1>
         <h1>Leo's FreeCodeCamp Studies</h1>
 
         <details class="contents">
@@ -43,8 +47,8 @@
                         <li><a href="responsive-web-design/tribute-page/index.html"><i class="fas fa-globe"></i> Live</a></li>
                     </ul>
                     <ul class="secondary-link">
-                        <li><a href="#"><i class="fas fa-code"></i> Source</a></li>
-                        <li><a href="#"><i class="fas fa-lightbulb"></i> Notes</a></li>
+                        <li><a href="https://github.io/anotherleo/leo-projects/studies/freecodecamp/responsive-web-design/tribute-page/index.html"><i class="fas fa-code"></i> Source</a></li>
+                        <li><a href="responsive-web-design/tribute-page/notes.md"><i class="fas fa-lightbulb"></i> Notes</a></li>
                     </ul>
                 </nav>
             </article>
@@ -139,7 +143,7 @@
                 </nav>
             </article>
 
-            <article class="card"class="card">
+            <article class="card">
                 <header>
                     <h4>Roman Numeral Converter</h4>
                 </header>
