--- a/studies/freecodecamp/index.html
+++ b/studies/freecodecamp/index.html
@@ -44,11 +44,11 @@
                 <p>Build a tribute page that has <a href="https://codepen.io/freeCodeCamp/full/zNqgVx">this</a> functionality.</p>
                 <nav class="nav">
                     <ul class="main-link">
-                        <li><a href="responsive-web-design/tribute-page/index.html"><i class="fas fa-globe"></i> Live</a></li>
+                        <li><a href="responsive-web-design/tribute-page/index.html"><i class="fas fa-globe" aria-hidden="true"></i> Live</a></li>
                     </ul>
                     <ul class="secondary-link">
-                        <li><a href="https://github.io/anotherleo/leo-projects/studies/freecodecamp/responsive-web-design/tribute-page/index.html"><i class="fas fa-code"></i> Source</a></li>
-                        <li><a href="responsive-web-design/tribute-page/notes.md"><i class="fas fa-lightbulb"></i> Notes</a></li>
+                        <li><a href="https://github.io/anotherleo/leo-projects/studies/freecodecamp/responsive-web-design/tribute-page/index.html"><i class="fas fa-code" aria-hidden="true"></i> Source</a></li>
+                        <li><a href="responsive-web-design/tribute-page/notes.md" aria-hidden="true"><i class="fas fa-lightbulb"></i> Notes</a></li>
                     </ul>
                 </nav>
             </article>
