--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
 
     <nav>
         <ul>
-            <a href="index.html"><i class="fas fa-home"></i> Homepage</a>
+            <a href="anotherleo.github.io/leo-projects/index.html"><i class="fas fa-home" aria-hidden="true"></i> Homepage</a>
         </ul>
     </nav>
 
