fixed broken link.

--- a/studies/freecodecamp/index.html
+++ b/studies/freecodecamp/index.html
@@ -47,7 +47,7 @@
                         <li><a href="responsive-web-design/tribute-page/index.html"><i class="fas fa-globe" aria-hidden="true"></i> Live</a></li>
                     </ul>
                     <ul class="secondary-link">
-                        <li><a href="https://github.io/anotherleo/leo-projects/studies/freecodecamp/responsive-web-design/tribute-page/index.html"><i class="fas fa-code" aria-hidden="true"></i> Source</a></li>
+                        <li><a href="https://github.com/anotherleo/leo-projects/tree/main/studies/freecodecamp/responsive-web-design/tribute-page"><i class="fas fa-code" aria-hidden="true"></i> Source</a></li>
                         <li><a href="responsive-web-design/tribute-page/notes.md" aria-hidden="true"><i class="fas fa-lightbulb"></i> Notes</a></li>
                     </ul>
                 </nav>
