--- a/studies/freecodecamp/responsive-web-design/tribute-page/index.html
+++ b/studies/freecodecamp/responsive-web-design/tribute-page/index.html
@@ -91,7 +91,9 @@
     </section>
 
     <footer>
-        <h5>2021. Made with <i class="fas fa-heart"></i> by Leo Thomas Monteiro.</h5>
+        <hr>
+        <h5>2021. Made with <i class="fas fa-heart"></i> by <a href="#" rel="author">Leo Thomas Monteiro</a>.</h5>
+        <h6 style="font-family: monospace;">Project based on <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" rel="noreferrer" target="_blank">"Tribute Page"</a> as requirement for the "Responsive Web Design" certification by <a href="https://www.freecodecamp.org/" rel="noreferrer" target="_blank">FreeCodeCamp</a>.</h6>
     </footer>
 </body>
 </html>
