--- a/studies/freecodecamp/index.html
+++ b/studies/freecodecamp/index.html
@@ -41,7 +41,8 @@
                 <header>
                     <h4>Tribute Page</h4>
                 </header>
-                <p>Build a tribute page that has <a href="https://codepen.io/freeCodeCamp/full/zNqgVx">this</a> functionality.</p>
+                <p><i class="fas fa-exclamation-circle" aria-hidden="true"></i>&nbsp;Quest<br>Build a tribute page that has <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" rel="noreferrer" target="_blank">this</a> functionality.</p>
+                <p><i class="fas fa-check-circle" aria-hidden="true"></i>&nbsp;Result<br>A page about the genious mathematician Sofia Kovalevskaya.</p>
                 <nav class="nav">
                     <ul class="main-link">
                         <li><a href="responsive-web-design/tribute-page/index.html"><i class="fas fa-globe" aria-hidden="true"></i> Live</a></li>
@@ -57,7 +58,7 @@
                 <header>
                     <h4>Survey Form</h4>
                 </header>
-                <p>Build a form page that has <a href="https://codepen.io/freeCodeCamp/full/VPaoNP">this</a> functionality.</p>
+                <p><i class="fas fa-exclamation-circle" aria-hidden="true"></i>&nbsp;Quest<br>Build a form page that has <a href="https://codepen.io/freeCodeCamp/full/VPaoNP">this</a> functionality.</p>
                 <nav class="nav">
                     <ul class="main-link">
                         <li><a href="#"><i class="fas fa-globe"></i> Live</a></li>
