--- a/studies/freecodecamp/index.html
+++ b/studies/freecodecamp/index.html
@@ -59,13 +59,14 @@
                     <h4>Survey Form</h4>
                 </header>
                 <p><i class="fas fa-exclamation-circle" aria-hidden="true"></i>&nbsp;Quest<br>Build a form page that has <a href="https://codepen.io/freeCodeCamp/full/VPaoNP">this</a> functionality.</p>
+                <p><i class="fas fa-check-circle" aria-hidden="true"></i>&nbsp;Result<br>A survey page for the fictional Study Habits Hero.</p>
                 <nav class="nav">
                     <ul class="main-link">
-                        <li><a href="#"><i class="fas fa-globe"></i> Live</a></li>
+                        <li><a href="responsive-web-design/form-page/index.html"><i class="fas fa-globe" aria-hidden="true"></i> Live</a></li>
                     </ul>
                     <ul class="secondary-link">
-                        <li><a href="#"><i class="fas fa-code"></i> Source</a></li>
-                        <li><a href="#"><i class="fas fa-lightbulb"></i> Notes</a></li>
+                        <li><a href="https://github.com/anotherleo/leo-projects/tree/main/studies/freecodecamp/responsive-web-design/form-page"><i class="fas fa-code" aria-hidden="true"></i> Source</a></li>
+                        <li><a href="responsive-web-design/form-page/notes.md" aria-hidden="true"><i class="fas fa-lightbulb"></i> Notes</a></li>
                     </ul>
                 </nav>
             </article>
