messing with drafts.

--- a/studies/freecodecamp/index.html
+++ b/studies/freecodecamp/index.html
@@ -75,7 +75,7 @@
                 <header>
                     <h4>Product Landing Page</h4>
                 </header>
-                <p>Build a product landing page that has <a href="https://codepen.io/freeCodeCamp/full/RKRbwL">this</a> functionality.</p>
+                <p><i class="fas fa-exclamation-circle" aria-hidden="true"></i>&nbsp;Quest<br>Build a product landing page that has <a href="https://codepen.io/freeCodeCamp/full/RKRbwL">this</a> functionality.</p>
                 <nav>
                     <ul class="main-link">
                         <li><a href="#"><i class="fas fa-globe"></i> Live</a></li>
