--- a/studies/freecodecamp/responsive-web-design/landing-page/index.html
+++ b/studies/freecodecamp/responsive-web-design/landing-page/index.html
@@ -38,6 +38,7 @@
                     <p>Build up study habits.</p>
                     <p>Challenge yourself.</p>
                     <p>Achieve your success.</p>
+                    <button class="call">Get started</span></button>
                 </article>
             </div>
         </section>
@@ -55,26 +56,38 @@
             </div>
 
             <article>
-                <h3>Features</h3>
+                <!-- <h3>Features</h3> -->
                 <div id="features-container" class="features-container">
                     <div class="feature-card background">
                         <i class="fas fa-stopwatch" aria-hidden="true"></i>
                         <p>Track your study time</p>
+                        <details>
+                            <summary></summary>
+                        </details>
                     </div>
 
                     <div class="feature-card background">
                         <i class="fas fa-calendar-alt" aria-hidden="true"></i>
                         <p>Organize your routine</p>
+                        <details>
+                            <summary></summary>
+                        </details>
                     </div>
 
                     <div class="feature-card background">
                         <i class="fas fa-pen-square" aria-hidden="true"></i>
                         <p>Keep important notes</p>
+                        <details>
+                            <summary></summary>
+                        </details>
                     </div>
 
                     <div class="feature-card background">
                         <i class="fas fa-cubes" aria-hidden="true"></i>
-                        <p>Customize with your unique style</p>
+                        <p>Customize as you wish</p>
+                        <details>
+                            <summary></summary>
+                        </details>
                     </div>
                 </div>
             </article>
@@ -84,7 +97,7 @@
             <article class="form-container background">
                 <form id="form" class="form" action="https://www.freecodecamp.com/email-submit">
                     <fieldset>
-                        <legend>Subscribe now and get 30-days free premium membership!</legend>
+                        <legend style="text-align:center;">Subscribe now and enjoy 30-days of <br><span class="upper">free premium membership!</span></legend>
                         
                         <label>Username:<br>
                             <input id="username" type="text" name="username" placeholder="your username">
