--- a/studies/freecodecamp/index.html
+++ b/studies/freecodecamp/index.html
@@ -20,6 +20,10 @@
     <header>
         <h1><i class="fab fa-free-code-camp" aria-hidden="true"></i></h1>
         <h1>Leo's FreeCodeCamp Studies</h1>
+        <nav>
+            <a href="https://www.freecodecamp.org/anotherleo"><img src="https://img.shields.io/badge/username-@anotherleo-blue" aria-hidden="true"></a>
+            <img src="https://img.shields.io/freecodecamp/points/anotherleo?color=purple&label=brownies&logo=freecodecamp" aria-hidden="true">
+        </nav>
 
         <details class="contents">
             <summary>Contents</summary>
@@ -41,7 +45,7 @@
                 <header>
                     <h4>Tribute Page</h4>
                 </header>
-                <p><i class="fas fa-exclamation-circle" aria-hidden="true"></i>&nbsp;Quest<br>Build a tribute page that has <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" rel="noreferrer" target="_blank">this</a> functionality.</p>
+                <p class="quest-done"><i class="fas fa-exclamation-circle" aria-hidden="true"></i>&nbsp;Quest<br>Build a tribute page that has <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" rel="noreferrer" target="_blank">this</a> functionality.</p>
                 <p><i class="fas fa-check-circle" aria-hidden="true"></i>&nbsp;Result<br>A page about the genious mathematician Sofia Kovalevskaya.</p>
                 <nav class="nav">
                     <ul class="main-link">
@@ -58,7 +62,7 @@
                 <header>
                     <h4>Survey Form</h4>
                 </header>
-                <p><i class="fas fa-exclamation-circle" aria-hidden="true"></i>&nbsp;Quest<br>Build a form page that has <a href="https://codepen.io/freeCodeCamp/full/VPaoNP">this</a> functionality.</p>
+                <p class="quest-done"><i class="fas fa-exclamation-circle" aria-hidden="true"></i>&nbsp;Quest<br>Build a form page that has <a href="https://codepen.io/freeCodeCamp/full/VPaoNP">this</a> functionality.</p>
                 <p><i class="fas fa-check-circle" aria-hidden="true"></i>&nbsp;Result<br>A survey page for the fictional Study Habits Hero.</p>
                 <nav class="nav">
                     <ul class="main-link">
@@ -75,8 +79,9 @@
                 <header>
                     <h4>Product Landing Page</h4>
                 </header>
-                <p><i class="fas fa-exclamation-circle" aria-hidden="true"></i>&nbsp;Quest<br>Build a product landing page that has <a href="https://codepen.io/freeCodeCamp/full/RKRbwL">this</a> functionality.</p>
-                <nav>
+                <p class="quest-done"><i class="fas fa-exclamation-circle" aria-hidden="true"></i>&nbsp;Quest<br>Build a product landing page that has <a href="https://codepen.io/freeCodeCamp/full/RKRbwL">this</a> functionality.</p>
+                <p><i class="fas fa-check-circle" aria-hidden="true"></i>&nbsp;Result<br>A landing page for the fictional Study Habits Hero application.</p>
+                <nav class="nav">
                     <ul class="main-link">
                         <li><a href="#"><i class="fas fa-globe"></i> Live</a></li>
                     </ul>
