--- a/studies/freecodecamp/index.html
+++ b/studies/freecodecamp/index.html
@@ -21,8 +21,8 @@
         <h1><i class="fab fa-free-code-camp" aria-hidden="true"></i></h1>
         <h1>Leo's FreeCodeCamp Studies</h1>
         <nav>
-            <a href="https://www.freecodecamp.org/anotherleo"><img src="https://img.shields.io/badge/username-@anotherleo-blue" aria-hidden="true"></a>
-            <img src="https://img.shields.io/freecodecamp/points/anotherleo?color=purple&label=brownies&logo=freecodecamp" aria-hidden="true">
+            <a href="https://www.freecodecamp.org/anotherleo"><img src="https://img.shields.io/badge/username-@anotherleo-blue" alt="freecodecamp user @anotherleo"></a>
+            <a href="https://www.freecodecamp.org/anotherleo"><img src="https://img.shields.io/freecodecamp/points/anotherleo?color=purple&label=brownies&logo=freecodecamp" alt="points display of freecodecamp activities"></a>
         </nav>
 
         <details class="contents">
