--- a/studies/freecodecamp/index.html
+++ b/studies/freecodecamp/index.html
@@ -20,7 +20,7 @@
     <header>
         <h1><i class="fab fa-free-code-camp" aria-hidden="true"></i></h1>
         <h1>Leo's FreeCodeCamp Studies</h1>
-        <nav>
+        <nav class="header-nav">
             <a href="https://www.freecodecamp.org/anotherleo"><img src="https://img.shields.io/badge/username-@anotherleo-blue" alt="freecodecamp user @anotherleo"></a>
             <a href="https://www.freecodecamp.org/anotherleo"><img src="https://img.shields.io/freecodecamp/points/anotherleo?color=purple&label=brownies&logo=freecodecamp" alt="points display of freecodecamp activities"></a>
         </nav>
@@ -96,7 +96,7 @@
                 <header>
                     <h4>Technical Documentation</h4>
                 </header>
-                <p>Build a technical documentation page that has <a href="https://codepen.io/freeCodeCamp/full/NdrKKL">this</a> functionality.</p>
+                <p class="quest"><i class="fas fa-exclamation-circle" aria-hidden="true"></i>&nbsp;Quest<br>Build a technical documentation page that has <a href="https://codepen.io/freeCodeCamp/full/NdrKKL">this</a> functionality.</p>
                 <nav>
                     <ul class="main-link">
                         <li><a href="#"><i class="fas fa-globe"></i> Live</a></li>
@@ -112,7 +112,7 @@
                 <header>
                     <h4>Personal Portfolio</h4>
                 </header>
-                <p>Build a personal portfolio page that has <a href="https://codepen.io/freeCodeCamp/full/zNBOYG">this</a> functionality.</p>
+                <p class="quest"><i class="fas fa-exclamation-circle" aria-hidden="true"></i>&nbsp;Quest<br>Build a personal portfolio page that has <a href="https://codepen.io/freeCodeCamp/full/zNBOYG">this</a> functionality.</p>
                 <nav>
                     <ul class="main-link">
                         <li><a href="#"><i class="fas fa-globe"></i> Live</a></li>
