--- a/studies/vue-traversy-course/random-generator/index.html
+++ b/studies/vue-traversy-course/random-generator/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <script src="https://kit.fontawesome.com/1a415b1d46.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/1a415b1d46.js" crossorigin="anonymous" defer></script>
 
     <title>Gerador Aleatório de Usuários</title>
 </head>
