--- a/studies/freecodecamp/responsive-web-design/portfolio-page/index.html
+++ b/studies/freecodecamp/responsive-web-design/portfolio-page/index.html
@@ -18,40 +18,59 @@
 <body>
 
     <div class="container">
+
         <header>
             <h1 class="title">Leo Thomas Monteiro</h1>
             <h1 class="subtitle">Personal Website</h1>
         </header>
+
         <main>
-            <h2>About me</h2>
-            <p>My name is Leo Thomas, I'm 25 years old and I'm currently searching for a position as JavaScript junior developer. I'm from Brazil, living in south and working as intern at my university where I'm studying Library Science. You can find me at Instagram, LinkedIn, or Twitter, and see my projects on GitHub.</p>
-            <p>Here you'll find some thoughts on my knowledge building-journey as developer, mostly because a good piece of advice from Felipe Deschamps: "you should write about what you're learning, even if you're insecure or if nobody's reading it".</p>
-            <p>On my personal life...
-                <ul>
-                    <li>Born in 1996</li>
-                    <li>Started studying Library Science in 2017</li>
-                    <li>I'm Asperger's</li>
-                    <li>I am openly a trans male</li>
-                    <li>Learning web development since 2020</li>
-                </ul>
-            </p>
-            <p>I love most...
-                <ul>
-                    <li>Books</li>
-                    <li>Strong coffee</li>
-                    <li>Stargazing</li>
-                    <li>Coding</li>
-                    <li>Dogs</li>
-                </ul>
-            </p>
-            <p>Focused on...
-                <ul>
-                    <li>JavaScript</li>
-                    <li>Vue.js</li>
-                    <li>Clean code</li>
-                </ul>
-            </p>
+            <section id="about">
+                <article>
+                    <h2>About me</h2>
+                    <p>My name is Leo Thomas, I'm 25 years old and I'm currently searching for a position as JavaScript junior developer. I'm from Brazil, living in south and working as intern at my university where I'm studying Library Science. You can find me at Instagram, LinkedIn, or Twitter, and see my projects on GitHub.</p>
+                    <p>Here you'll find some thoughts on my knowledge building-journey as developer, mostly because a good piece of advice from Felipe Deschamps: "you should write about what you're learning, even if you're insecure or if nobody's reading it".</p>
+                </article>
+            
+                <article class="traits">
+                    <div>
+                        <h3>On my personal life...</h3>
+                        <ul>
+                            <li>Born in 1996</li>
+                            <li>Studying Library Science in 2017</li>
+                            <li>I'm Asperger's</li>
+                            <li>I am openly a trans male</li>
+                            <li>Learning web development since 2020</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>I love most...</h3>
+                        <ul>
+                            <li>Books</li>
+                            <li>Strong coffee</li>
+                            <li>Stargazing</li>
+                            <li>Coding</li>
+                            <li>Dogs</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>Focused on...</h3>
+                        <ul>
+                            <li>JavaScript</li>
+                            <li>Vue.js</li>
+                            <li>Clean code</li>
+                        </ul>
+                    </div>
+                </article>
+
+                <article>
+
+                </article>
+            </section>
+
+
         </main>
+
         <footer>
         </footer>
     </div>
