--- a/studies/freecodecamp/responsive-web-design/portfolio-page/index.html
+++ b/studies/freecodecamp/responsive-web-design/portfolio-page/index.html
@@ -18,13 +18,14 @@
 </head>
 <body>
 
-    <nav id="navbar">
-        <a href="#"></a>
+    <nav id="navbar" class="navbar">
+        <a href="#blog">Blog</a>
+        <a href="#projects">Projects</a>
     </nav>
-    
+
     <div class="container">
 
-        <header id="welcome-section">
+        <header id="welcome-section" class="welcome-section">
             <h1 class="title">Leo Thomas Monteiro</h1>
             <h1 class="subtitle">Personal Website</h1>
         </header>
@@ -68,7 +69,7 @@
                     </div>
                 </article>
 
-                <article>
+                <article id="blog">
                     <h2>Blog Posts</h2>
                     <div id="js-show-blog-posts"></div>
                 </article>
@@ -83,7 +84,7 @@
                             <a href="#">Application</a>
                             <a href="#">Landing page</a>
                             <a href="#">Survey</a>
-                            <a href="https://github.io/anotherleo" id="profile-link">GitHub</a>
+                            <a id="profile-link" href="https://github.io/anotherleo" target="_blank">GitHub</a>
                         </nav>
                     </div>
                     
