--- a/studies/freecodecamp/index.html
+++ b/studies/freecodecamp/index.html
@@ -13,7 +13,7 @@
 
     <script src="https://kit.fontawesome.com/1a415b1d46.js" crossorigin="anonymous" defer></script>
 
-    <title>FreeCodeCamp Portfolio</title>
+    <title>Leo's FreeCodeCamp Studies</title>
 </head>
 <body>
 
@@ -115,7 +115,7 @@
                 <p class="quest"><i class="fas fa-exclamation-circle" aria-hidden="true"></i>&nbsp;Quest<br>Build a personal portfolio page that has <a href="https://codepen.io/freeCodeCamp/full/zNBOYG">this</a> functionality.</p>
                 <nav>
                     <ul class="main-link">
-                        <li><a href="#"><i class="fas fa-globe"></i> Live</a></li>
+                        <li><a href="responsive-web-design/portfolio-page/index.html"><i class="fas fa-globe" aria-hidden="true"></i> Live</a></li>
                     </ul>
                     <ul class="secondary-link">
                         <li><a href="#"><i class="fas fa-code"></i> Source</a></li>
